--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -116,30 +116,23 @@ client:
   command: ["tail", "-f", "/dev/null"]
 
 bootstrap:
-  # -- Enable the all-in-one bootstrap job --
   enabled: true
-
-  # -- Declarative identity mapping --
-  # This identity will be mapped to the specified account.
+  
+  # --- ADD THIS NEW SECTION ---
+  # These are the temporary user/pass credentials the bootstrap job will use to authenticate.
+  # They must match the credentials created by the rucio-init job.
+  auth:
+    username: "rucio"
+    password: "rucio"
+  
+  # The X.509 identity to be registered to the root account
   identity:
     account: "root"
     type: "X509"
-    # --- IMPORTANT: PASTE YOUR CLIENT CERTIFICATE DN HERE ---
     id: "/C=GB/ST=London/L=London/O=MyOrg/OU=Users/CN=rucio-test-user"
 
-  # -- Declarative RSE configuration --
-  # This section can now be used by the bootstrap job.
-  rse:
-    - name: "BOULBY_STORAGE"
-      rse_type: DISK
-      deterministic: True
-      volatile: False
-      protocols:
-        - scheme: "davs"
-          hostname: "xlzd-data.boulby.ac.uk"
-          port: 1094
-          prefix: "/rucio"
-          impl: "rucio.rse.protocols.webdav.Default"
+
+  
 # Database Configuration (PostgreSQL)
 postgresql:
   # --  Configuration of built-in postgresql database. If 'enabled: true', a postgresql instance will be deployed, otherwise, an external database must be provided in database.default value
