--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -45,7 +45,7 @@ spec:
             - name: RUCIO_CFG_BOOTSTRAP_ACCOUNT
               value: "root"
             - name: RUCIO_CFG_BOOTSTRAP_X509_IDENTITY
-              value: "{{ required "rucio.root_identity_dn is required in values.yaml!" .Values.rucio.root_identity_dn }}"
+              value: "{{ required "rucio.server.root_identity_dn is required in values.yaml!" .Values.rucio.server.root_identity_dn }}"
             - name: RUCIO_CFG_BOOTSTRAP_X509_EMAIL
               value: "rucio-root@example.com"
             - name: RUCIO_PRINT_CFG
