init job from posgres 14

--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -16,7 +16,7 @@ spec:
       
       initContainers:
         - name: wait-for-db
-          image: postgres:16-alpine
+          image: postgres:14
           imagePullPolicy: IfNotPresent
           env:
             - name: PGPASSWORD
