--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -34,7 +34,7 @@ spec:
 
       containers:
         - name: db-init
-          image: rucio/rucio-init:release-38.3.0
+          image: "{{ .Values.initJob.image }}"
           imagePullPolicy: Always
           env:
             - name: RUCIO_CFG_DATABASE_DEFAULT
