--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -22,7 +22,7 @@ rucio:
       ThreadsPerChild: 25
       MaxConnectionsPerChild: 1000    
     fts_host: "https://fts3-public.cern.ch:8446"
-    root_identity_dn: "/C=GB/ST=London/L=London/O=MyOrg/OU=Users/CN=rucio-test-user"
+    root_identity_dn: "C=GB,ST=London,L=London,O=MyOrg,OU=Users,CN=rucio-test-user"
 
     # This variable is still useful for other tools.
     ca_path: "/etc/grid-security/certificates"
