--- a/rucio-xlzd/templates/deployment.yaml
+++ b/rucio-xlzd/templates/deployment.yaml
@@ -108,6 +108,10 @@ spec:
         - name: rucio-config-volume
           configMap:
             name: rucio-client-config
+            defaultMode: 0755
+        - name: rucio-config-volume
+          configMap:
+            name: rucio-client-config
         # This is the extraVolume for the CA certs
         {{- with .Values.client.extraVolumes }}
         {{- toYaml . | nindent 8 }}
@@ -123,8 +127,16 @@ spec:
             - name: rucio-config-volume
               mountPath: /opt/rucio/etc/rucio.cfg
               subPath: rucio.cfg
+            - name: rucio-config-volume
+              mountPath: /app/scripts/register-rse.sh
+              subPath: register-rse.sh
+              readOnly: true              
             # This is the extraVolumeMount for the CA certs
             {{- with .Values.client.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
+          lifecycle:
+          postStart:
+            exec:
+              command: ["/bin/sh", "-c", "/app/scripts/register-rse.sh"]
 {{- end }}
