--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -40,6 +40,18 @@ data:
   ca.pem: {{ (.Files.Get "certificates/ca.pem") | b64enc }}
   209843b3.0: {{ (.Files.Get "certificates/209843b3.0") | b64enc }}
 
+---
+#  Secret for XRootD RSE
+{{- if .Values.rseCredentials.boulbyXrootd.token }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: rucio-rse-boulby-xrootd-credentials
+type: Opaque
+data:
+  # This creates a file named 'xrootd_token' in the secret
+  xrootd_token: {{ .Values.rseCredentials.boulbyXrootd.token | b64enc }}
+{{- end }}
 
 
-  # TODO: OIDS secrets in chart
+# TODO: OIDS secrets in chart
