--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -39,7 +39,8 @@ data:
     echo "✅ Rucio server is ready."
     
     # 2. Check if the RSE already exists to make this script idempotent
-    if rucio-admin rse get "$RSE_NAME" >/dev/null 2>&1; then
+    # --- FIX 1 ---
+    if rucio rse get "$RSE_NAME" >/dev/null 2>&1; then
       echo "✅ RSE '$RSE_NAME' already exists. Exiting."
       exit 0
     fi
@@ -48,26 +49,30 @@ data:
     echo "Registering new RSE: $RSE_NAME"
     
     # Step 3.1: Add the RSE
-    rucio-admin rse add "$RSE_NAME"
+    # --- FIX 2 ---
+    rucio rse add "$RSE_NAME"
     
     # Step 3.2: Set the XRootD protocol
-    rucio-admin rse set-protocol --rse "$RSE_NAME" --scheme root \
+    # --- FIX 3 ---
+    rucio rse set-protocol --rse "$RSE_NAME" --scheme root \
       --hostname "xlzd-data.boulby.ac.uk" --port 1094 \
       --prefix "/rucio/" \
       --impl "rucio.rse.protocols.xrootd.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
     # Step 3.3: Set the token attribute
-    rucio-admin rse set-attribute --rse "$RSE_NAME" \
+    # --- FIX 4 ---
+    rucio rse set-attribute --rse "$RSE_NAME" \
       --key "auth_token" \
       --value "$TOKEN_PATH"
 
     # Step 3.4: Set other attributes
-    rucio-admin rse set-attribute --rse "$RSE_NAME" --key "sign_url" --value "wan.read"
-    rucio-admin rse set-attribute --rse "$RSE_NAME" --key "lfn2pfn_algorithm" --value "hash"
+    rucio rse set-attribute --rse "$RSE_NAME" --key "sign_url" --value "wan.read"
+    rucio rse set-attribute --rse "$RSE_NAME" --key "lfn2pfn_algorithm" --value "hash"
     
     # Step 3.5: Set a limit
-    rucio-admin rse set-limit --rse "$RSE_NAME" --name storage --value 1000000000000 # 1TB
+    # --- FIX 5 ---
+    rucio rse set-limit --rse "$RSE_NAME" --name storage --value 1000000000000 # 1TB
 
     echo "✅ Successfully registered RSE '$RSE_NAME'."
 {{- end }}
