--- a/rucio-xlzd/templates/deployment.yaml
+++ b/rucio-xlzd/templates/deployment.yaml
@@ -118,8 +118,8 @@ spec:
         - name: rucio-client
           image: "{{ .Values.client.image.repository }}:{{ .Values.client.image.tag }}"
           imagePullPolicy: {{ .Values.client.image.pullPolicy | default "IfNotPresent" }}
-          #command: ["tail", "-f", "/dev/null"]
-          command: ["/bin/sh", "/app/scripts/register-rse.sh"]
+          command: ["tail", "-f", "/dev/null"]
+          #command: ["/bin/sh", "/app/scripts/register-rse.sh"]
           volumeMounts:
             # Mount the rucio.cfg file
             - name: rucio-config-volume
@@ -133,9 +133,9 @@ spec:
             {{- with .Values.client.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-          #lifecycle:
-          #  postStart:
-          #    exec:
-          #     command: ["/bin/sh", "-c", "/app/scripts/register-rse.sh"]            
+          lifecycle:
+            postStart:
+              exec:
+               command: ["/bin/sh", "-c", "/app/scripts/register-rse.sh"]            
 
 {{- end }}
