--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -33,41 +33,34 @@ data:
     done
     echo "✅ Rucio server is ready."
     
-    # --- UPDATED CHECK ---
-    # Use 'list-attributes' as a more reliable check for existence.
     echo "Checking if RSE '$RSE_NAME' already exists..."
-    if rucio rse list-attributes "$RSE_NAME" >/dev/null 2>&1; then
-      echo "✅ RSE '$RSE_NAME' already exists. Exiting script."
-      exit 0
+    if rucio rse attribute get "$RSE_NAME" rse_type >/dev/null 2>&1; then
+      echo "✅ RSE '$RSE_NAME' already exists. Skipping registration."
+    else
+      echo "Registering new RSE: $RSE_NAME"
+      rucio rse add "$RSE_NAME"
     fi
-    
-    # 3. Register the RSE
-    echo "Registering new RSE: $RSE_NAME"
-    
-    # Step 3.1: Add the RSE
-    rucio rse add "$RSE_NAME"
-    
-    # Step 3.2: Set the XRootD protocol
-    # --- COMMAND FIX: 'add-protocol' ---
-    rucio rse add-protocol --rse "$RSE_NAME" --scheme root \
+
+    echo "Setting RSE protocol..."
+    # --- SYNTAX ATTEMPT 3: 'rse protocol add' ---
+    rucio rse protocol add --rse "$RSE_NAME" --scheme root \
       --hostname "xlzd-data.boulby.ac.uk" --port 1094 \
       --prefix "/rucio/" \
       --impl "rucio.rse.protocols.xrootd.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
-    # Step 3.3: Set the token attribute
-    # --- COMMAND FIX: 'set-attr' ---
-    rucio rse set-attr --rse "$RSE_NAME" \
+    echo "Setting RSE attributes..."
+    # --- SYNTAX ATTEMPT 3: 'rse attribute add' ---
+    rucio rse attribute add --rse "$RSE_NAME" \
       --key "auth_token" \
       --value "$TOKEN_PATH"
 
-    # Step 3.4: Set other attributes
-    rucio rse set-attr --rse "$RSE_NAME" --key "sign_url" --value "wan.read"
-    rucio rse set-attr --rse "$RSE_NAME" --key "lfn2pfn_algorithm" --value "hash"
+    rucio rse attribute add --rse "$RSE_NAME" --key "sign_url" --value "wan.read"
+    rucio rse attribute add --rse "$RSE_NAME" --key "lfn2pfn_algorithm" --value "hash"
     
-    # Step 3.5: Set a limit
-    # --- COMMAND FIX: 'set-limits' ---
-    rucio rse set-limits --rse "$RSE_NAME" --name storage --value 1000000000000 # 1TB
+    echo "Setting RSE limits..."
+    # --- SYNTAX ATTEMPT 3: 'account limit add' ---
+    rucio account limit add root --rse "$RSE_NAME" --bytes 1000000000000 # 1TB
 
-    echo "✅ Successfully registered RSE '$RSE_NAME'."
+    echo "✅ Successfully configured RSE '$RSE_NAME'."
 {{- end }}
