--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -34,32 +34,34 @@ data:
     echo "✅ Rucio server is ready."
     
     echo "Checking if RSE '$RSE_NAME' already exists..."
+    # Check for an attribute; if error, it doesn't exist
     if rucio rse attribute get "$RSE_NAME" rse_type >/dev/null 2>&1; then
-      echo "✅ RSE '$RSE_NAME' already exists. Skipping registration."
+      echo "✅ RSE '$RSE_NAME' already exists. Ensuring configuration..."
     else
       echo "Registering new RSE: $RSE_NAME"
       rucio rse add "$RSE_NAME"
     fi
 
-    echo "Setting RSE protocol..."
-    # --- FIX: Using '--host' and positional RSE (matches k8s-tutorial) ---
+    echo "Attempting to delete existing protocol (in case of previous errors)..."
+    # Try deleting first to ensure clean state, ignore errors if it doesn't exist
+    rucio rse protocol delete "$RSE_NAME" --scheme root --hostname "xlzd-data.boulby.ac.uk" --port 1094 || true
+
+    echo "Setting RSE protocol using GFAL implementation..."
+    # Add the protocol with GFAL
     rucio rse protocol add "$RSE_NAME" --host "xlzd-data.boulby.ac.uk" --scheme root \
       --port 1094 \
       --prefix "/rucio/" \
-      --impl "rucio.rse.protocols.xrootd.Default" \
+      --impl "rucio.rse.protocols.gfal.Default" \
       --domain-json '{"wan": {"read": 1, "write": 1, "delete": 1, "third_party_copy_read": 1}, "lan": {"read": 1, "write": 1, "delete": 1}}'
 
     echo "Setting RSE attributes..."
-    # --- FIX: Using positional RSE (matches k8s-tutorial) ---
-    rucio rse attribute add "$RSE_NAME" \
-      --key "auth_token" \
-      --value "$TOKEN_PATH"
-
+    # Add attributes (will update if they exist)
+    rucio rse attribute add "$RSE_NAME" --key "auth_token" --value "$TOKEN_PATH"
     rucio rse attribute add "$RSE_NAME" --key "sign_url" --value "wan.read"
     rucio rse attribute add "$RSE_NAME" --key "lfn2pfn_algorithm" --value "hash"
     
     echo "Setting RSE limits..."
-    # --- FIX: Using '--rse' flag (matches k8s-tutorial) ---
+    # Add limit (will update if it exists)
     rucio account limit add root --rse "$RSE_NAME" --bytes 1000000000000 # 1TB
 
     echo "✅ Successfully configured RSE '$RSE_NAME'."
