--- a/rucio-xlzd/templates/deployment.yaml
+++ b/rucio-xlzd/templates/deployment.yaml
@@ -31,33 +31,35 @@ spec:
             - name: https
               containerPort: 443
               protocol: TCP
-          
-          # --- This hook will run as root to install certs ---
+              
+  # --- This hook will now log to a file and not crash the pod ---
           lifecycle:
             postStart:
               exec:
                 command: ["/bin/sh", "-c"]
                 args:
                   - |
-                    set -ex
-                    echo "--- [postStart Hook] Running as $(whoami) ---"
-                    
-                    # 1. Add the EGI repository
-                    echo "[postStart Hook] Downloading EGI repo file..."
-                    curl -o /etc/yum.repos.d/egi-trustanchors.repo https://repository.egi.eu/sw/production/cas/1/current/repo-files/egi-trustanchors.repo
-                    
-                    # 2. Install certificates
-                    echo "[postStart Hook] Installing ca-policy-egi-core..."
-                    dnf install -y ca-policy-egi-core
-                    
-                    # 3. (Optional but recommended) Install GFAL plugin
-                    echo "[postStart Hook] Installing gfal2-plugin-xrootd..."
-                    dnf install -y gfal2-plugin-xrootd
+                    # This wraps the entire script.
+                    # All output (stdout & stderr) is redirected to the log file.
+                    # '|| true' ensures the hook exits 0 even if the script fails.
+                    {
+                      set -ex
+                      echo "--- [postStart Hook] Running as $(whoami) at $(date) ---"
+                      
+                      echo "[postStart Hook] 1. Downloading EGI repo file..."
+                      curl -o /etc/yum.repos.d/egi-trustanchors.repo https://repository.egi.eu/sw/production/cas/1/current/repo-files/egi-trustanchors.repo
+                      
+                      echo "[postStart Hook] 2. Installing ca-policy-egi-core..."
+                      dnf install -y ca-policy-egi-core
+                      
+                      echo "[postStart Hook] 3. Installing gfal2-plugin-xrootd..."
+                      dnf install -y gfal2-plugin-xrootd
 
-                    # 4. Clean up
-                    dnf clean all
-                    
-                    echo "--- [postStart Hook] Package installation complete ---"
+                      echo "[postStart Hook] 4. Clean up dnf..."
+                      dnf clean all
+                      
+                      echo "--- [postStart Hook] Package installation script finished ---"
+                    } > /var/log/poststart-hook.log 2>&1 || true
           # --- End of hook ---
 
           {{- with .Values.rucio.server.readinessProbe }}
